# imagebot

./: .gitignore  .gitmodules  LICENSE.txt  README.rst  ez_setup.py  pyproject.toml  run.py  scrapy.cfg  setup.py
imagebot/: __main__.py  clear.py  dbmanager.py  env.py  items.py  main.py  middleware.py  monitor.py  monitor_gtk.py  monitor_tk.py  pipelines.py  pysix.py  settings.py  settings_dev.py  settings_release.py  sort.py  system.py  tables.sql  version.py
imagebot/spiders/: __init__.py  bot.py  init.py
