[tool.poetry]
name = "imagebot-poetry"
version = "0.1.0"
description = ""
authors = ["anoduck <11767-anoduck@users.noreply.gitgud.io>"]

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.1.0"
Scrapy = "^2.6.1"
mutils = "^1.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
